<resources>
    <string name="app_name">Words</string>
    <string name="TextDefault">Text</string>
    <string name="ImageDefault">Image</string>
    <string name="SwitchDefault">normal模式</string>
    <string name="ButtonDefault">Button</string>
    <string name="button_insert">insert</string>
    <string name="button_delete">delete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textViewadd">添加单词</string>
    <string name="button_add">添加</string>
    <string name="editText_english" />
    <string name="editText_chinese" />
    <string name="chineseMeaning">中文释义</string>
    <string name="englishWords">英文单词</string>
    <string name="menu_clear">清空数据</string>
    <string name="menu_change">切换视图</string>
    <string name="menu_search">Search</string>
</resources>
