<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordsAddFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewadd"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/editText_english"
        app:layout_constraintEnd_toEndOf="@+id/editText_english"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/editText_english"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="添加单词" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText_chinese"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/editText_chinese"
        app:layout_constraintTop_toBottomOf="@+id/editText_chinese" />

    <EditText
        android:id="@+id/editText_chinese"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/chineseMeaning"
        android:inputType="textPersonName"
        android:text="@string/editText_chinese"
        app:layout_constraintBottom_toTopOf="@+id/button_submit"
        app:layout_constraintEnd_toEndOf="@+id/editText_english"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_english"
        app:layout_constraintTop_toBottomOf="@+id/editText_english"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_english"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/englishWords"
        android:inputType="textPersonName"
        android:text="@string/editText_english"
        app:layout_constraintBottom_toTopOf="@+id/editText_chinese"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>